H2: Remove scanner close and error checking. Update problem 5 Error handling and output.
Removed scanner closing and error checking statements/functions.

Missed problem 5 error handling and output on previous commit. Included here.