@@ -11,18 +11,11 @@ import java.util.Scanner;
 
 public class Problem_5 {
 
-    public static void main(String[] args) throws Exception {
+    public static void main(String[] args){
 
         Scanner Year_Input = new Scanner(System.in);
         System.out.print("Please enter a year: ");
         int Year = Year_Input.nextInt();
-
-        while (Year <= 0){
-            System.out.print("Please provide a year in A.D.: ");
-            Year_Input.nextInt();
-        }
-
-        Year_Input.close();
 
         if (Year % 400 == 0) {
             System.out.println(Year + " is a leap year.");
@@ -35,32 +28,31 @@ public class Problem_5 {
 }
 
 /*
-hunterpoole@Megs-MacBook-Pro HW2 %  /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-21.jdk/Contents/Home/bin/java -XX:+ShowCodeDetail
-sInExceptionMessages -cp /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2/bin Problem_5 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>  & 'C:\Program Files\Java\jdk-23\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2\bin' 'Problem_5' 
 
 Please enter a year: 2000
 2000 is a leap year.
 
-hunterpoole@Megs-MacBook-Pro HW2 %  cd /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2 ; /usr/bin/env /Library/Java/JavaVirtualMachines/te
-murin-21.jdk/Contents/Home/bin/java -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2/bin Proble
-m_5 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2> ^C
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2> 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>  c:; cd 'c:\Users\hunte\Documents\GitHub\155-W2-H2\HW2'; & 'C:\Program Files\Java\jdk-23\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2\bin' 'Problem_5' 
 
 Please enter a year: 2001
 2001 is not a leap year.
 
-hunterpoole@Megs-MacBook-Pro HW2 %  cd /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2 ; /usr/bin/env /Library/Java/JavaVirtualMachines/te
-murin-21.jdk/Contents/Home/bin/java -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2/bin Proble
-m_5 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2> ^C
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>  c:; cd 'c:\Users\hunte\Documents\GitHub\155-W2-H2\HW2'; & 'C:\Program Files\Java\jdk-23\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2\bin' 'Problem_5'        
 
 Please enter a year: 1988
 1988 is a leap year.
 
-hunterpoole@Megs-MacBook-Pro HW2 %  cd /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2 ; /usr/bin/env /Library/Java/JavaVirtualMachines/te
-murin-21.jdk/Contents/Home/bin/java -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/hunterpoole/Documents/GitHub/155-W2-H2/HW2/bin Proble
-m_5 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2> ^C
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2>  c:; cd 'c:\Users\hunte\Documents\GitHub\155-W2-H2\HW2'; & 'C:\Program Files\Java\jdk-23\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2\bin' 'Problem_5'        
 
 Please enter a year: 2031
 2031 is not a leap year.
 
-hunterpoole@Megs-MacBook-Pro HW2 % 
+PS C:\Users\hunte\Documents\GitHub\155-W2-H2\HW2> 
 */
